--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -4,11 +4,13 @@ pipeline {
     buildDiscarder(logRotator(numToKeepStr: '2'))
   }
    stages {
-      stage('Say Hello') {
-         steps {
+    stage('Test') {
+        steps {
+          container('nodejs') {
             echo 'Hello World!'   
             sh 'java -version'
-         }
+          }
+        }
       }
    }
 }
