--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -2,9 +2,11 @@ pipeline {
    agent none
    options { 
     buildDiscarder(logRotator(numToKeepStr: '2'))
+    skipDefaultCheckout true
   }
    stages {
     stage('Test') {
+        checkout scm
         agent { label 'nodejs-app' }
         steps {
           container('nodejs') {
