--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -3,6 +3,7 @@ pipeline {
    options { 
     buildDiscarder(logRotator(numToKeepStr: '2'))
     skipDefaultCheckout true
+    preserveStashes(buildCount: 2)
   }
   post {
     aborted {
@@ -14,7 +15,28 @@ pipeline {
   }
    stages {
     stage('Test') {
-        agent { label 'nodejs-app' }
+      agent {
+        kubernetes {
+          label 'nodejs-app-inline'
+          yaml """
+          kind: Pod
+          metadata:
+          name: nodejs-app
+spec:
+  containers:
+  - name: nodejs
+    image: node:10.10.1-alpine
+    command:
+    - cat
+    tty: true
+  - name: testcafe
+    image: 946759952272.dkr.ecr.us-east-1.amazonaws.com/kypseli/testcafe:alpha-1
+    command:
+    - cat
+    tty: true
+          """
+        }
+      }
         steps {
           checkout scm
           container('nodejs') {
@@ -39,6 +61,9 @@ pipeline {
       }
       options {
         timeout(time: 30, unit: 'SECONDS') 
+      }
+       steps {
+        echo "Continuing with deployment"
       }
     }
    }
