--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -52,6 +52,9 @@ steps {
                stash name: 'app', includes: '*.js, public/**, views/*, Dockerfile'
            }
         }
+         always {
+          junit 'res.xml'
+        }
       }
      stage('Build and Push Image') {
          when {
